--- a/day06/image.html
+++ b/day06/image.html
@@ -7,8 +7,14 @@
 </head>
 <body>
     <h1>Mango</h1>
-    <!-- <img src="mango.avif" alt="Mango Image" width="200px" height="200px"/> -->
+    <img src="mango.avif" alt="Mango Image" width="200px" height="200px"/>
     <!-- <img src="mango.avif" alt="Mango Image" height="100px" title="Mango"/> -->
     <img src="https://picsum.photos/id/10/200/300?grayscale" alt="Mango Image" title="Mango"/>
+
+    
+<h2>
+
+    <a href="../index.html">Home Page</a>
+</h2>
 </body>
 </html>
