--- a/index.html
+++ b/index.html
@@ -1,4 +1,22 @@
-This is my first web page.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page</title>
+</head>
+<body>
+    <h1 align="center">Landing Page</h1>
+<hr/>
+    This is my first web page.<br/>
+    This is first repo for Batch -05.<br/>
+    First Day work.
+    <hr/>
+    First Day work - <a href="./day02/test.html">Day 01</a><br/>
+    Second Day work - <a href="./day03/test.html">Day 02</a><br/>
+    third Day work - <a href="./day04/sourceFile.html">Day 03</a><br/>
+    Fourth Day work - <a href="./day05/description.html">Day 04</a><br/>
+    Fifth Day work - <a href="./day06/image.html">Day 05</a><br/>
+</body>
+</html>
 
-
-This is first repo for Batch -05
